# piscan

./: .env.example  .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  DATASHEET.md  LICENSE  PIScanner_Overview.pptx  PROJECT_OVERVIEW.md  PUBLISHING.md  README.md  RESULTS.md  SECURITY.md  TESTING_REAL_CHATBOTS.md  THESIS_RESULTS.md  llama3_full.json  localhost_report.html  pyproject.toml  results.json  sweep.py  titan_full_report.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Research/: ANALYSIS_FINDINGS.md  ICGETEI2026_Abstract.md  PIScanner_Paper.docx  PIScanner_Presentation.pptx  PIScanner_Research_Paper.docx  PIScanner_Simple_Presentation.pptx  README.md  RESULTS_COMPARISON.md  THESIS_METHODOLOGY.md
datasets/: README.md  piscan_50k_stats.md  piscan_hard517.jsonl  piscan_hard517.xlsx  piscan_strongest517.jsonl  piscan_strongest517.xlsx
demo/: README.md  vulnerable_chatbot.py
piscan/: aggregate.py  browser.py  classifier.py  cli.py  crawler.py  detector.py  judge.py  payloads.py  prober.py  report.py  target.py
piscan/generator/: __init__.py  __main__.py  export.py  goals.py  languages.py  mutations.py  personas.py  pipeline.py  seeds.py  wrappers.py
piscan/payloads/: agentic.json  benign.json  direct.json  encoding.json  extraction.json  indirect.json  multiturn.json  role.json
realbot/: README.md  app.py
scripts/: evaluate.py  export_dataset.py  train_classifier.py
shopease-site/: HANDOVER.md  README.md  index.html  index.py  requirements.txt
shopease-site/api/: chat.py
shopease-site/backend/: requirements.txt  server.py
targets/: browser-example.json  example.json  local-demo.json  openai-style.json  realbot-browser.json  realbot.json  titan-api.json  titan.json
tests/: test_cli.py  test_core.py
